Code review.  Reduced dependency cross section